--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,9 @@ body {
   font-family: Roboto;
 }
 
+p {
+  color: white !important;
+}
 .nav-item a {
   font-family: IBM Plex Sans;
   color: white;
@@ -71,10 +74,21 @@ input[type="number"]::-webkit-inner-spin-button {
   margin: 0;
 }
 
-/* Para Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
+}
+
+select {
+  max-width: 50%;
+  margin-bottom: 1rem;
+  border: none;
+}
+
+#miImagen2 {
+  max-width: 60%;
+  border-radius: 15px;
+  margin: 2rem;
 }
 
 .container {
@@ -95,11 +109,14 @@ section {
   margin-bottom: 2rem;
 }
 
-.res label,
-p {
+.res label {
   color: var(--color-primario);
   font-family: IBM Plex Sans !important;
   font-size: 18px;
+}
+
+.res {
+  color: var(--color-primario) !important;
 }
 
 h1,
@@ -181,4 +198,20 @@ h6 {
   font-weight: 400;
   padding: 0;
   margin: 0;
+}
+
+.form-select:focus {
+  box-shadow: none;
+  border-color: transparent;
+  outline: none;
+}
+
+.form-select option:hover,
+.form-select option:active {
+  background-color: var(--color-primario) !important;
+}
+
+.select-custom option:hover,
+.select-custom option:checked {
+  background-color: var(--color-primario) !important;
 }
