--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,7 +11,6 @@
 
 body {
   background-color: var(--color-fondo);
-  padding-bottom: 4rem;
   font-family: Roboto;
 }
 
@@ -134,6 +133,10 @@ h4 {
   color: white;
 }
 
+h1 {
+  color: var(--color-acento);
+}
+
 .pblanco {
   color: white;
   padding-left: 1rem;
@@ -214,4 +217,27 @@ h6 {
 .select-custom option:hover,
 .select-custom option:checked {
   background-color: var(--color-primario) !important;
+}
+
+.logo-footer {
+  max-width: 70px;
+}
+
+.footer-menu li {
+  list-style: none;
+}
+
+.footer {
+  border-top: 2px solid #f7df1e; /* Línea superior para estilo */
+}
+
+.foot span {
+  color: var(--color-primario);
+}
+
+span {
+  color: white;
+}
+.titp {
+  color: var(--color-primario) !important;
 }
