--- a/css/estilos.css
+++ b/css/estilos.css
@@ -84,7 +84,8 @@ select {
   border: none;
 }
 
-#miImagen2 {
+#miImagen2,
+#miImagen {
   max-width: 60%;
   border-radius: 15px;
   margin: 2rem;
@@ -241,4 +242,79 @@ span {
 .titp {
   color: var(--color-primario) !important;
   margin: 0;
+}
+
+.calculadora {
+  width: 320px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 30px;
+  background: #ebccd6;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Centrar calculadora en el contenedor */
+.d-flex {
+  justify-content: center !important;
+}
+
+/* Pantalla de la calculadora */
+.pantalla {
+  height: 50px;
+  text-align: right;
+  font-size: 1.8rem;
+  padding: 10px;
+  margin-bottom: 10px;
+  background: #d5e2e4;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  color: black;
+}
+
+/* Estilos generales de los botones */
+.btn-calculadora {
+  width: 65px;
+  height: 65px;
+  font-size: 1.5rem;
+  background-color: #d7b8c2;
+  border: none;
+  border-radius: 50%; /* Hace los botones redondos */
+  transition: background-color 0.3s;
+}
+
+/* Alineación de los botones a la derecha */
+.row {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px; /* Espacio entre botones */
+}
+
+/* Efecto hover para los botones */
+.btn-calculadora:hover {
+  background-color: #c98ca8 !important;
+}
+
+/* Botón de igual ocupa todo el ancho y es de color #C98CA8 */
+.btn-igual {
+  width: 100%;
+  font-size: 1.5rem;
+  height: 65px;
+  background-color: #c98ca8 !important;
+  color: black;
+  border-radius: 30px; /* Hace el botón de igual más estilizado */
+  border: none;
+}
+
+/* Botones de % y ⌫ con color negro */
+.btn-secundario {
+  background-color: #d7b8c2 !important;
+  color: black !important;
+}
+
+.btn-secundario:hover {
+  background-color: #c98ca8 !important;
+}
+
+.rosa {
+  background-color: #c98ca8 !important;
 }
